# src/features/common/common.route.ts
@@ -1,0 +1,8 @@
+import { Router } from "express";
+import commonController from "./common.controller";
+const commonRoute = Router();
+
+// Example: /api/common/dropdown?type=brand
+commonRoute.get("/dropdown", commonController.dropdown);
+
+export default commonRoute;
